# ChangeLog for sys-libs/db
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/db/ChangeLog,v 1.225 2007/08/27 17:16:58 jurek Exp $

  27 Aug 2007; Jurek Bartuszek <jurek@gentoo.org> db-4.5.20_p2.ebuild:
  x86 stable (bug #178750)

  20 Aug 2007; Caleb Tennis <caleb@gentoo.org> db-1.85-r1.ebuild,
  -db-1.85-r2.ebuild, -db-4.2.52_p2-r1.ebuild, -db-4.6.18.ebuild:
  remove some unnecessary versions

*db-4.6.19 (19 Aug 2007)

  19 Aug 2007; Caleb Tennis <caleb@gentoo.org> +db-4.6.19.ebuild:
  version bump

*db-4.6.18 (15 Aug 2007)

  15 Aug 2007; Caleb Tennis <caleb@gentoo.org>
  +files/db-4.6-jarlocation.patch,
  +files/db-4.6-jni-check-prefix-first.patch, +files/db-4.6-libtool.patch,
  +db-4.6.18.ebuild:
  Next major revision of db.  package.mask'd for now for further testing

  09 Aug 2007; Jeroen Roovers <jer@gentoo.org> db-4.5.20_p2.ebuild:
  Stable for HPPA (bug #178750).

  27 Jul 2007; Raúl Porcel <armin76@gentoo.org> db-4.5.20_p2.ebuild:
  alpha stable

  12 Jul 2007; Roy Marples <uberlord@gentoo.org> db-4.5.20_p2.ebuild:
  Keyworded ~sparc-fbsd

  04 Jul 2007; Jeroen Roovers <jer@gentoo.org> db-4.5.20_p2.ebuild:
  Reverting to ~hppa. :\

  04 Jul 2007; Jeroen Roovers <jer@gentoo.org> db-4.5.20_p2.ebuild:
  Stable for HPPA (bug #178750).

  01 Jul 2007; Christoph Mende <angelos@gentoo.org> db-4.5.20_p2.ebuild:
  Appending -O2 for people who don't have any optimization turned on, bug
  #171231

  26 Jun 2007; Raúl Porcel <armin76@gentoo.org> db-4.5.20_p2.ebuild:
  ia64 stable wrt #178750

  26 Jun 2007; Lars Weiler <pylon@gentoo.org> db-4.5.20_p2.ebuild:
  Stable on ppc; bug #178750.

  15 Jun 2007; Christoph Mende <angelos@gentoo.org> db-4.5.20_p2.ebuild:
  Stable on amd64 wrt bug 178750

  13 Jun 2007; Raúl Porcel <armin76@gentoo.org> db-4.5.20_p2.ebuild:
  Add ~alpha

  13 Jun 2007; Gustavo Zacarias <gustavoz@gentoo.org> db-4.5.20_p2.ebuild:
  Stable on sparc wrt #178750
