@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/db
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/db/ChangeLog,v 1.225 2007/08/27 17:16:58 jurek Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/db/ChangeLog,v 1.226 2007/09/03 17:07:56 caleb Exp $
+
+  03 Sep 2007; Caleb Tennis <caleb@gentoo.org> db-3.2.9-r11.ebuild:
+  Changing java dep per bug #181832
 
   27 Aug 2007; Jurek Bartuszek <jurek@gentoo.org> db-4.5.20_p2.ebuild:
   x86 stable (bug #178750)
